# radiocove

./: .gitignore  PRIVACY.md  README.md  index.html  package-lock.json  package.json  tray.html  vite.config.js
.github/workflows/: build-artifacts.yml  deploy-docs.yml  release.yml
public/: browser-loading.html  splash.html
scripts/: build-msix.ps1
scripts/msix/: AppxManifest.template.xml
src/: App.jsx  tray-main.jsx  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: events.rs  lib.rs  main.rs  settings.rs  setup.rs  state.rs
src-tauri/src/commands/: backup.rs  browser.rs  favicon.rs  player.rs  scraping.rs  settings_cmd.rs
src-tauri/src/platform/: macos.rs  shortcut.rs  splash.rs  thumbbar.rs
src-tauri/src/player/: stream.rs
src-tauri/src/services/: discord_rpc.rs  media.rs  proxy.rs  stations.rs
src/components/common/: TitleBar.jsx  WhatsNewModal.jsx
src/components/player/: NowPlaying.jsx  TrayPlayer.jsx
src/components/stations/: StationList.jsx
src/locales/: de.json  en.json  tr.json
src/views/: SettingsView.jsx  SetupScreen.jsx
website/: README.md  index.html  license.html  package-lock.json  package.json  privacy.html  vite.config.js
website/de/: index.html
website/public/: robots.txt  sitemap.xml
website/scripts/: build-legal.mjs  fetch-releases.mjs
website/src/: App.jsx  de-main.jsx  main.jsx  styles.css
website/src/components/: Changelog.jsx  Download.jsx  Features.jsx  Footer.jsx  Header.jsx  Hero.jsx  LanguageSwitcher.jsx  LegalPage.jsx  MediaControls.jsx  Screenshot.jsx  ScreenshotPlaceholder.jsx  Screenshots.jsx
website/src/lib/: LanguageContext.jsx  i18n.js  languages.js  platform.js  routes.js
website/src/locales/: de.js  en.js  tr.js
website/tr/: index.html
