[package]
name = "radiocove"
version = "1.2.0"
edition = "2021"
description = "Desktop radio streaming application"
license = "GPL-3.0-only"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(cargo_clippy)'] }

[lib]
name = "radiocove_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "native-tls", "json", "blocking", "multipart", "cookies"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
symphonia = { version = "0.5", default-features = false, features = ["mp3", "aac", "isomp4"] }
rodio = { version = "0.19", default-features = false }
bytes = "1"
futures-util = { version = "0.3", default-features = false }
souvlaki = "0.8.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "ico"] }
encoding_rs = "0.8"
urlencoding = "2"
base64 = "0.22.1"
tiny_http = "0.12.0"
chardetng = "0.1.17"
chrono = { version = "0.4", features = ["serde"] }
songrec-lib = "0.5.3"
zip = "2.0"
tempfile = "3"
rfd = "0.15"
walkdir = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
include_dir = "0.7.4"
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
discord-rich-presence = "0.2"
winapi = { version = "0.3.9", features = ["libloaderapi", "winuser", "processthreadsapi"] }
once_cell = "1.21.3"
tauri-runtime = "2.10.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
dark-light = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
strip = true
lto = false
codegen-units = 16
opt-level = "s"
